--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root" style="background-image: url(https://img.freepik.com/vector-gratis/fondo-invierno-hojas-pinceles-color-pastel_220290-42.jpg?w=2000&t=st=1708813052~exp=1708813652~hmac=5180ebc2eb82697579d3517a79ec1f0b5b9858d95d2cf8aab58a4272c51f4902);background-size: repeat;background-position: center;min-height: 100vh;"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
